# passclip

./: README.md  pyproject.toml  ruff.toml
old_src/passclip/: cli.py  generator.py
src/passclip/: cli.py  generator.py  main.py  markov_chain.py
