[project]
name = "passclip"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.15.4,<0.16.0)",
    "pyperclip (>=1.9.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "passclip", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
