[project]
name = "passclip"
version = "0.1.0"
description = "A CLI tool to generate and copy secure and easy-to-remember passwords to the clipboard."
authors = [{ name = "Samuel Kosmann", email = "samuel.kosmann@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "pyperclip>=1.11.0",
    "typer>=0.20.0",
]
